[package]
name = "rate-limiter"
version = "0.1.0"
description = "On-chain rate limiter for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rate_limiter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
